src/parser.output
Grammar

    0 $accept: program $end

    1 program: CLASS PROGRAM OPEN_BRACE field_decl method_decl CLOSED_BRACE
    2        | CLASS PROGRAM OPEN_BRACE field_decl CLOSED_BRACE
    3        | CLASS PROGRAM OPEN_BRACE method_decl CLOSED_BRACE
    4        | CLASS PROGRAM OPEN_BRACE CLOSED_BRACE

    5 field_decl: type data
    6           | field_decl data

    7 type: INT
    8     | BOOLEAN

    9 data: ID
   10     | ID OPEN_SQUARE int_literal CLOSED_SQUARE
   11     | ID COMMA data
   12     | ID OPEN_SQUARE int_literal CLOSED_SQUARE COMMA data

   13 method_decl: method
   14            | method_decl method

   15 method: type ID OPEN_PAREN params CLOSED_PAREN block
   16       | type ID OPEN_PAREN CLOSED_PAREN block
   17       | VOID ID OPEN_PAREN params CLOSED_PAREN block
   18       | VOID ID OPEN_PAREN CLOSED_PAREN block

   19 params: type ID
   20       | type ID COMMA params

   21 block: OPEN_BRACE CLOSED_BRACE
   22      | OPEN_BRACE var_decl CLOSED_BRACE
   23      | OPEN_BRACE statement_star CLOSED_BRACE
   24      | OPEN_BRACE var_decl statement_star CLOSED_BRACE

   25 var_decl: var
   26         | var_decl var

   27 var: type id_star SEMI_COLON

   28 id_star: ID
   29        | ID COMMA id_star

   30 statement_star: statement
   31               | statement_star statement

   32 statement: location assign_op expr SEMI_COLON
   33          | method_call SEMI_COLON
   34          | IF OPEN_PAREN expr CLOSED_PAREN block
   35          | IF OPEN_PAREN expr CLOSED_PAREN block ELSE block
   36          | FOR ID EQUALS expr SEMI_COLON expr block
   37          | RETURN SEMI_COLON
   38          | RETURN expr SEMI_COLON
   39          | BREAK SEMI_COLON
   40          | CONTINUE SEMI_COLON
   41          | block

   42 location: ID
   43         | ID OPEN_SQUARE expr CLOSED_SQUARE

   44 assign_op: SUB
   45          | PLUSEQUAL
   46          | MINUSEQUAL

   47 method_call: method_name OPEN_PAREN expr_star CLOSED_PAREN
   48            | method_name OPEN_PAREN CLOSED_PAREN
   49            | CALLOUT OPEN_PAREN STRING_LITERAL CLOSED_PAREN
   50            | CALLOUT OPEN_PAREN STRING_LITERAL SEMI_COLON callout_arg_star CLOSED_PAREN

   51 method_name: ID

   52 expr_star: expr
   53          | expr COMMA expr_star

   54 callout_arg_star: callout_arg
   55                 | callout_arg COMMA callout_arg_star

   56 callout_arg: expr
   57            | STRING_LITERAL

   58 expr: location
   59     | method_call
   60     | literal
   61     | expr ADD expr
   62     | expr SUB expr
   63     | expr MUL expr
   64     | expr DIV expr
   65     | expr MOD expr
   66     | expr LT expr
   67     | expr GT expr
   68     | expr LE expr
   69     | expr GE expr
   70     | expr EQUALEQUAL expr
   71     | expr NOTEQUAL expr
   72     | expr COND_AND expr
   73     | expr COND_OR expr
   74     | SUB expr
   75     | NOT expr
   76     | OPEN_PAREN expr CLOSED_PAREN

   77 literal: int_literal
   78        | CHAR_LITERAL
   79        | bool_literal

   80 int_literal: DECIMAL_LITERAL
   81            | HEX_LITERAL

   82 bool_literal: TRUE
   83             | FALSE


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 1 2 3 4
VOID (259) 17 18
RETURN (260) 37 38
CALLOUT (261) 49 50
CLASS (262) 1 2 3 4
ELSE (263) 35
IF (264) 34 35
FOR (265) 36
CONTINUE (266) 40
BREAK (267) 39
INT (268) 7
BOOLEAN (269) 8
TRUE (270) 82
FALSE (271) 83
OPEN_BRACE (272) 1 2 3 4 21 22 23 24
CLOSED_BRACE (273) 1 2 3 4 21 22 23 24
ADD (274) 61
SUB (275) 44 62 74
DIV (276) 64
MUL (277) 63
MOD (278) 65
LT (279) 66
GT (280) 67
LE (281) 68
GE (282) 69
ID (283) 9 10 11 12 15 16 17 18 19 20 28 29 36 42 43 51
HEX_LITERAL (284) 81
DECIMAL_LITERAL (285) 80
CHAR_LITERAL (286) 78
STRING_LITERAL (287) 49 50 57
SEMI_COLON (288) 27 32 33 36 37 38 39 40 50
COMMA (289) 11 12 20 29 53 55
PLUSEQUAL (290) 45
MINUSEQUAL (291) 46
EQUALS (292) 36
COND_OR (293) 73
COND_AND (294) 72
EQUALEQUAL (295) 70
NOTEQUAL (296) 71
NOT (297) 75
OPEN_SQUARE (298) 10 12 43
CLOSED_SQUARE (299) 10 12 43
OPEN_PAREN (300) 15 16 17 18 34 35 47 48 49 50 76
CLOSED_PAREN (301) 15 16 17 18 34 35 47 48 49 50 76


Nonterminals, with rules where they appear

$accept (47)
    on left: 0
program (48)
    on left: 1 2 3 4, on right: 0
field_decl (49)
    on left: 5 6, on right: 1 2 6
type (50)
    on left: 7 8, on right: 5 15 16 19 20 27
data (51)
    on left: 9 10 11 12, on right: 5 6 11 12
method_decl (52)
    on left: 13 14, on right: 1 3 14
method (53)
    on left: 15 16 17 18, on right: 13 14
params (54)
    on left: 19 20, on right: 15 17 20
block (55)
    on left: 21 22 23 24, on right: 15 16 17 18 34 35 36 41
var_decl (56)
    on left: 25 26, on right: 22 24 26
var (57)
    on left: 27, on right: 25 26
id_star (58)
    on left: 28 29, on right: 27 29
statement_star (59)
    on left: 30 31, on right: 23 24 31
statement (60)
    on left: 32 33 34 35 36 37 38 39 40 41, on right: 30 31
location (61)
    on left: 42 43, on right: 32 58
assign_op (62)
    on left: 44 45 46, on right: 32
method_call (63)
    on left: 47 48 49 50, on right: 33 59
method_name (64)
    on left: 51, on right: 47 48
expr_star (65)
    on left: 52 53, on right: 47 53
callout_arg_star (66)
    on left: 54 55, on right: 50 55
callout_arg (67)
    on left: 56 57, on right: 54 55
expr (68)
    on left: 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
    76, on right: 32 34 35 36 38 43 52 53 56 61 62 63 64 65 66 67 68
    69 70 71 72 73 74 75 76
literal (69)
    on left: 77 78 79, on right: 60
int_literal (70)
    on left: 80 81, on right: 10 12 77
bool_literal (71)
    on left: 82 83, on right: 79


State 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program  go to state 2


State 1

    1 program: CLASS . PROGRAM OPEN_BRACE field_decl method_decl CLOSED_BRACE
    2        | CLASS . PROGRAM OPEN_BRACE field_decl CLOSED_BRACE
    3        | CLASS . PROGRAM OPEN_BRACE method_decl CLOSED_BRACE
    4        | CLASS . PROGRAM OPEN_BRACE CLOSED_BRACE

    PROGRAM  shift, and go to state 3


State 2

    0 $accept: program . $end

    $end  shift, and go to state 4


State 3

    1 program: CLASS PROGRAM . OPEN_BRACE field_decl method_decl CLOSED_BRACE
    2        | CLASS PROGRAM . OPEN_BRACE field_decl CLOSED_BRACE
    3        | CLASS PROGRAM . OPEN_BRACE method_decl CLOSED_BRACE
    4        | CLASS PROGRAM . OPEN_BRACE CLOSED_BRACE

    OPEN_BRACE  shift, and go to state 5


State 4

    0 $accept: program $end .

    $default  accept


State 5

    1 program: CLASS PROGRAM OPEN_BRACE . field_decl method_decl CLOSED_BRACE
    2        | CLASS PROGRAM OPEN_BRACE . field_decl CLOSED_BRACE
    3        | CLASS PROGRAM OPEN_BRACE . method_decl CLOSED_BRACE
    4        | CLASS PROGRAM OPEN_BRACE . CLOSED_BRACE

    VOID          shift, and go to state 6
    INT           shift, and go to state 7
    BOOLEAN       shift, and go to state 8
    CLOSED_BRACE  shift, and go to state 9

    field_decl   go to state 10
    type         go to state 11
    method_decl  go to state 12
    method       go to state 13


State 6

   17 method: VOID . ID OPEN_PAREN params CLOSED_PAREN block
   18       | VOID . ID OPEN_PAREN CLOSED_PAREN block

    ID  shift, and go to state 14


State 7

    7 type: INT .

    $default  reduce using rule 7 (type)


State 8

    8 type: BOOLEAN .

    $default  reduce using rule 8 (type)


State 9

    4 program: CLASS PROGRAM OPEN_BRACE CLOSED_BRACE .

    $default  reduce using rule 4 (program)


State 10

    1 program: CLASS PROGRAM OPEN_BRACE field_decl . method_decl CLOSED_BRACE
    2        | CLASS PROGRAM OPEN_BRACE field_decl . CLOSED_BRACE
    6 field_decl: field_decl . data

    VOID          shift, and go to state 6
    INT           shift, and go to state 7
    BOOLEAN       shift, and go to state 8
    CLOSED_BRACE  shift, and go to state 15
    ID            shift, and go to state 16

    type         go to state 17
    data         go to state 18
    method_decl  go to state 19
    method       go to state 13


State 11

    5 field_decl: type . data
   15 method: type . ID OPEN_PAREN params CLOSED_PAREN block
   16       | type . ID OPEN_PAREN CLOSED_PAREN block

    ID  shift, and go to state 20

    data  go to state 21


State 12

    3 program: CLASS PROGRAM OPEN_BRACE method_decl . CLOSED_BRACE
   14 method_decl: method_decl . method

    VOID          shift, and go to state 6
    INT           shift, and go to state 7
    BOOLEAN       shift, and go to state 8
    CLOSED_BRACE  shift, and go to state 22

    type    go to state 17
    method  go to state 23


State 13

   13 method_decl: method .

    $default  reduce using rule 13 (method_decl)


State 14

   17 method: VOID ID . OPEN_PAREN params CLOSED_PAREN block
   18       | VOID ID . OPEN_PAREN CLOSED_PAREN block

    OPEN_PAREN  shift, and go to state 24


State 15

    2 program: CLASS PROGRAM OPEN_BRACE field_decl CLOSED_BRACE .

    $default  reduce using rule 2 (program)


State 16

    9 data: ID .
   10     | ID . OPEN_SQUARE int_literal CLOSED_SQUARE
   11     | ID . COMMA data
   12     | ID . OPEN_SQUARE int_literal CLOSED_SQUARE COMMA data

    COMMA        shift, and go to state 25
    OPEN_SQUARE  shift, and go to state 26

    $default  reduce using rule 9 (data)


State 17

   15 method: type . ID OPEN_PAREN params CLOSED_PAREN block
   16       | type . ID OPEN_PAREN CLOSED_PAREN block

    ID  shift, and go to state 27


State 18

    6 field_decl: field_decl data .

    $default  reduce using rule 6 (field_decl)


State 19

    1 program: CLASS PROGRAM OPEN_BRACE field_decl method_decl . CLOSED_BRACE
   14 method_decl: method_decl . method

    VOID          shift, and go to state 6
    INT           shift, and go to state 7
    BOOLEAN       shift, and go to state 8
    CLOSED_BRACE  shift, and go to state 28

    type    go to state 17
    method  go to state 23


State 20

    9 data: ID .
   10     | ID . OPEN_SQUARE int_literal CLOSED_SQUARE
   11     | ID . COMMA data
   12     | ID . OPEN_SQUARE int_literal CLOSED_SQUARE COMMA data
   15 method: type ID . OPEN_PAREN params CLOSED_PAREN block
   16       | type ID . OPEN_PAREN CLOSED_PAREN block

    COMMA        shift, and go to state 25
    OPEN_SQUARE  shift, and go to state 26
    OPEN_PAREN   shift, and go to state 29

    $default  reduce using rule 9 (data)


State 21

    5 field_decl: type data .

    $default  reduce using rule 5 (field_decl)


State 22

    3 program: CLASS PROGRAM OPEN_BRACE method_decl CLOSED_BRACE .

    $default  reduce using rule 3 (program)


State 23

   14 method_decl: method_decl method .

    $default  reduce using rule 14 (method_decl)


State 24

   17 method: VOID ID OPEN_PAREN . params CLOSED_PAREN block
   18       | VOID ID OPEN_PAREN . CLOSED_PAREN block

    INT           shift, and go to state 7
    BOOLEAN       shift, and go to state 8
    CLOSED_PAREN  shift, and go to state 30

    type    go to state 31
    params  go to state 32


State 25

   11 data: ID COMMA . data

    ID  shift, and go to state 16

    data  go to state 33


State 26

   10 data: ID OPEN_SQUARE . int_literal CLOSED_SQUARE
   12     | ID OPEN_SQUARE . int_literal CLOSED_SQUARE COMMA data

    HEX_LITERAL      shift, and go to state 34
    DECIMAL_LITERAL  shift, and go to state 35

    int_literal  go to state 36


State 27

   15 method: type ID . OPEN_PAREN params CLOSED_PAREN block
   16       | type ID . OPEN_PAREN CLOSED_PAREN block

    OPEN_PAREN  shift, and go to state 29


State 28

    1 program: CLASS PROGRAM OPEN_BRACE field_decl method_decl CLOSED_BRACE .

    $default  reduce using rule 1 (program)


State 29

   15 method: type ID OPEN_PAREN . params CLOSED_PAREN block
   16       | type ID OPEN_PAREN . CLOSED_PAREN block

    INT           shift, and go to state 7
    BOOLEAN       shift, and go to state 8
    CLOSED_PAREN  shift, and go to state 37

    type    go to state 31
    params  go to state 38


State 30

   18 method: VOID ID OPEN_PAREN CLOSED_PAREN . block

    OPEN_BRACE  shift, and go to state 39

    block  go to state 40


State 31

   19 params: type . ID
   20       | type . ID COMMA params

    ID  shift, and go to state 41


State 32

   17 method: VOID ID OPEN_PAREN params . CLOSED_PAREN block

    CLOSED_PAREN  shift, and go to state 42


State 33

   11 data: ID COMMA data .

    $default  reduce using rule 11 (data)


State 34

   81 int_literal: HEX_LITERAL .

    $default  reduce using rule 81 (int_literal)


State 35

   80 int_literal: DECIMAL_LITERAL .

    $default  reduce using rule 80 (int_literal)


State 36

   10 data: ID OPEN_SQUARE int_literal . CLOSED_SQUARE
   12     | ID OPEN_SQUARE int_literal . CLOSED_SQUARE COMMA data

    CLOSED_SQUARE  shift, and go to state 43


State 37

   16 method: type ID OPEN_PAREN CLOSED_PAREN . block

    OPEN_BRACE  shift, and go to state 39

    block  go to state 44


State 38

   15 method: type ID OPEN_PAREN params . CLOSED_PAREN block

    CLOSED_PAREN  shift, and go to state 45


State 39

   21 block: OPEN_BRACE . CLOSED_BRACE
   22      | OPEN_BRACE . var_decl CLOSED_BRACE
   23      | OPEN_BRACE . statement_star CLOSED_BRACE
   24      | OPEN_BRACE . var_decl statement_star CLOSED_BRACE

    RETURN        shift, and go to state 46
    CALLOUT       shift, and go to state 47
    IF            shift, and go to state 48
    FOR           shift, and go to state 49
    CONTINUE      shift, and go to state 50
    BREAK         shift, and go to state 51
    INT           shift, and go to state 7
    BOOLEAN       shift, and go to state 8
    OPEN_BRACE    shift, and go to state 39
    CLOSED_BRACE  shift, and go to state 52
    ID            shift, and go to state 53

    type            go to state 54
    block           go to state 55
    var_decl        go to state 56
    var             go to state 57
    statement_star  go to state 58
    statement       go to state 59
    location        go to state 60
    method_call     go to state 61
    method_name     go to state 62


State 40

   18 method: VOID ID OPEN_PAREN CLOSED_PAREN block .

    $default  reduce using rule 18 (method)


State 41

   19 params: type ID .
   20       | type ID . COMMA params

    COMMA  shift, and go to state 63

    $default  reduce using rule 19 (params)


State 42

   17 method: VOID ID OPEN_PAREN params CLOSED_PAREN . block

    OPEN_BRACE  shift, and go to state 39

    block  go to state 64


State 43

   10 data: ID OPEN_SQUARE int_literal CLOSED_SQUARE .
   12     | ID OPEN_SQUARE int_literal CLOSED_SQUARE . COMMA data

    COMMA  shift, and go to state 65

    $default  reduce using rule 10 (data)


State 44

   16 method: type ID OPEN_PAREN CLOSED_PAREN block .

    $default  reduce using rule 16 (method)


State 45

   15 method: type ID OPEN_PAREN params CLOSED_PAREN . block

    OPEN_BRACE  shift, and go to state 39

    block  go to state 66


State 46

   37 statement: RETURN . SEMI_COLON
   38          | RETURN . expr SEMI_COLON

    CALLOUT          shift, and go to state 47
    TRUE             shift, and go to state 67
    FALSE            shift, and go to state 68
    SUB              shift, and go to state 69
    ID               shift, and go to state 53
    HEX_LITERAL      shift, and go to state 34
    DECIMAL_LITERAL  shift, and go to state 35
    CHAR_LITERAL     shift, and go to state 70
    SEMI_COLON       shift, and go to state 71
    NOT              shift, and go to state 72
    OPEN_PAREN       shift, and go to state 73

    location      go to state 74
    method_call   go to state 75
    method_name   go to state 62
    expr          go to state 76
    literal       go to state 77
    int_literal   go to state 78
    bool_literal  go to state 79


State 47

   49 method_call: CALLOUT . OPEN_PAREN STRING_LITERAL CLOSED_PAREN
   50            | CALLOUT . OPEN_PAREN STRING_LITERAL SEMI_COLON callout_arg_star CLOSED_PAREN

    OPEN_PAREN  shift, and go to state 80


State 48

   34 statement: IF . OPEN_PAREN expr CLOSED_PAREN block
   35          | IF . OPEN_PAREN expr CLOSED_PAREN block ELSE block

    OPEN_PAREN  shift, and go to state 81


State 49

   36 statement: FOR . ID EQUALS expr SEMI_COLON expr block

    ID  shift, and go to state 82


State 50

   40 statement: CONTINUE . SEMI_COLON

    SEMI_COLON  shift, and go to state 83


State 51

   39 statement: BREAK . SEMI_COLON

    SEMI_COLON  shift, and go to state 84


State 52

   21 block: OPEN_BRACE CLOSED_BRACE .

    $default  reduce using rule 21 (block)


State 53

   42 location: ID .
   43         | ID . OPEN_SQUARE expr CLOSED_SQUARE
   51 method_name: ID .

    OPEN_SQUARE  shift, and go to state 85

    OPEN_PAREN  reduce using rule 51 (method_name)
    $default    reduce using rule 42 (location)


State 54

   27 var: type . id_star SEMI_COLON

    ID  shift, and go to state 86

    id_star  go to state 87


State 55

   41 statement: block .

    $default  reduce using rule 41 (statement)


State 56

   22 block: OPEN_BRACE var_decl . CLOSED_BRACE
   24      | OPEN_BRACE var_decl . statement_star CLOSED_BRACE
   26 var_decl: var_decl . var

    RETURN        shift, and go to state 46
    CALLOUT       shift, and go to state 47
    IF            shift, and go to state 48
    FOR           shift, and go to state 49
    CONTINUE      shift, and go to state 50
    BREAK         shift, and go to state 51
    INT           shift, and go to state 7
    BOOLEAN       shift, and go to state 8
    OPEN_BRACE    shift, and go to state 39
    CLOSED_BRACE  shift, and go to state 88
    ID            shift, and go to state 53

    type            go to state 54
    block           go to state 55
    var             go to state 89
    statement_star  go to state 90
    statement       go to state 59
    location        go to state 60
    method_call     go to state 61
    method_name     go to state 62


State 57

   25 var_decl: var .

    $default  reduce using rule 25 (var_decl)


State 58

   23 block: OPEN_BRACE statement_star . CLOSED_BRACE
   31 statement_star: statement_star . statement

    RETURN        shift, and go to state 46
    CALLOUT       shift, and go to state 47
    IF            shift, and go to state 48
    FOR           shift, and go to state 49
    CONTINUE      shift, and go to state 50
    BREAK         shift, and go to state 51
    OPEN_BRACE    shift, and go to state 39
    CLOSED_BRACE  shift, and go to state 91
    ID            shift, and go to state 53

    block        go to state 55
    statement    go to state 92
    location     go to state 60
    method_call  go to state 61
    method_name  go to state 62


State 59

   30 statement_star: statement .

    $default  reduce using rule 30 (statement_star)


State 60

   32 statement: location . assign_op expr SEMI_COLON

    SUB         shift, and go to state 93
    PLUSEQUAL   shift, and go to state 94
    MINUSEQUAL  shift, and go to state 95

    assign_op  go to state 96


State 61

   33 statement: method_call . SEMI_COLON

    SEMI_COLON  shift, and go to state 97


State 62

   47 method_call: method_name . OPEN_PAREN expr_star CLOSED_PAREN
   48            | method_name . OPEN_PAREN CLOSED_PAREN

    OPEN_PAREN  shift, and go to state 98


State 63

   20 params: type ID COMMA . params

    INT      shift, and go to state 7
    BOOLEAN  shift, and go to state 8

    type    go to state 31
    params  go to state 99


State 64

   17 method: VOID ID OPEN_PAREN params CLOSED_PAREN block .

    $default  reduce using rule 17 (method)


State 65

   12 data: ID OPEN_SQUARE int_literal CLOSED_SQUARE COMMA . data

    ID  shift, and go to state 16

    data  go to state 100


State 66

   15 method: type ID OPEN_PAREN params CLOSED_PAREN block .

    $default  reduce using rule 15 (method)


State 67

   82 bool_literal: TRUE .

    $default  reduce using rule 82 (bool_literal)


State 68

   83 bool_literal: FALSE .

    $default  reduce using rule 83 (bool_literal)


State 69

   74 expr: SUB . expr

    CALLOUT          shift, and go to state 47
    TRUE             shift, and go to state 67
    FALSE            shift, and go to state 68
    SUB              shift, and go to state 69
    ID               shift, and go to state 53
    HEX_LITERAL      shift, and go to state 34
    DECIMAL_LITERAL  shift, and go to state 35
    CHAR_LITERAL     shift, and go to state 70
    NOT              shift, and go to state 72
    OPEN_PAREN       shift, and go to state 73

    location      go to state 74
    method_call   go to state 75
    method_name   go to state 62
    expr          go to state 101
    literal       go to state 77
    int_literal   go to state 78
    bool_literal  go to state 79


State 70

   78 literal: CHAR_LITERAL .

    $default  reduce using rule 78 (literal)


State 71

   37 statement: RETURN SEMI_COLON .

    $default  reduce using rule 37 (statement)


State 72

   75 expr: NOT . expr

    CALLOUT          shift, and go to state 47
    TRUE             shift, and go to state 67
    FALSE            shift, and go to state 68
    SUB              shift, and go to state 69
    ID               shift, and go to state 53
    HEX_LITERAL      shift, and go to state 34
    DECIMAL_LITERAL  shift, and go to state 35
    CHAR_LITERAL     shift, and go to state 70
    NOT              shift, and go to state 72
    OPEN_PAREN       shift, and go to state 73

    location      go to state 74
    method_call   go to state 75
    method_name   go to state 62
    expr          go to state 102
    literal       go to state 77
    int_literal   go to state 78
    bool_literal  go to state 79


State 73

   76 expr: OPEN_PAREN . expr CLOSED_PAREN

    CALLOUT          shift, and go to state 47
    TRUE             shift, and go to state 67
    FALSE            shift, and go to state 68
    SUB              shift, and go to state 69
    ID               shift, and go to state 53
    HEX_LITERAL      shift, and go to state 34
    DECIMAL_LITERAL  shift, and go to state 35
    CHAR_LITERAL     shift, and go to state 70
    NOT              shift, and go to state 72
    OPEN_PAREN       shift, and go to state 73

    location      go to state 74
    method_call   go to state 75
    method_name   go to state 62
    expr          go to state 103
    literal       go to state 77
    int_literal   go to state 78
    bool_literal  go to state 79


State 74

   58 expr: location .

    $default  reduce using rule 58 (expr)


State 75

   59 expr: method_call .

    $default  reduce using rule 59 (expr)


State 76

   38 statement: RETURN expr . SEMI_COLON
   61 expr: expr . ADD expr
   62     | expr . SUB expr
   63     | expr . MUL expr
   64     | expr . DIV expr
   65     | expr . MOD expr
   66     | expr . LT expr
   67     | expr . GT expr
   68     | expr . LE expr
   69     | expr . GE expr
   70     | expr . EQUALEQUAL expr
   71     | expr . NOTEQUAL expr
   72     | expr . COND_AND expr
   73     | expr . COND_OR expr

    ADD         shift, and go to state 104
    SUB         shift, and go to state 105
    DIV         shift, and go to state 106
    MUL         shift, and go to state 107
    MOD         shift, and go to state 108
    LT          shift, and go to state 109
    GT          shift, and go to state 110
    LE          shift, and go to state 111
    GE          shift, and go to state 112
    SEMI_COLON  shift, and go to state 113
    COND_OR     shift, and go to state 114
    COND_AND    shift, and go to state 115
    EQUALEQUAL  shift, and go to state 116
    NOTEQUAL    shift, and go to state 117


State 77

   60 expr: literal .

    $default  reduce using rule 60 (expr)


State 78

   77 literal: int_literal .

    $default  reduce using rule 77 (literal)


State 79

   79 literal: bool_literal .

    $default  reduce using rule 79 (literal)


State 80

   49 method_call: CALLOUT OPEN_PAREN . STRING_LITERAL CLOSED_PAREN
   50            | CALLOUT OPEN_PAREN . STRING_LITERAL SEMI_COLON callout_arg_star CLOSED_PAREN

    STRING_LITERAL  shift, and go to state 118


State 81

   34 statement: IF OPEN_PAREN . expr CLOSED_PAREN block
   35          | IF OPEN_PAREN . expr CLOSED_PAREN block ELSE block

    CALLOUT          shift, and go to state 47
    TRUE             shift, and go to state 67
    FALSE            shift, and go to state 68
    SUB              shift, and go to state 69
    ID               shift, and go to state 53
    HEX_LITERAL      shift, and go to state 34
    DECIMAL_LITERAL  shift, and go to state 35
    CHAR_LITERAL     shift, and go to state 70
    NOT              shift, and go to state 72
    OPEN_PAREN       shift, and go to state 73

    location      go to state 74
    method_call   go to state 75
    method_name   go to state 62
    expr          go to state 119
    literal       go to state 77
    int_literal   go to state 78
    bool_literal  go to state 79


State 82

   36 statement: FOR ID . EQUALS expr SEMI_COLON expr block

    EQUALS  shift, and go to state 120


State 83

   40 statement: CONTINUE SEMI_COLON .

    $default  reduce using rule 40 (statement)


State 84

   39 statement: BREAK SEMI_COLON .

    $default  reduce using rule 39 (statement)


State 85

   43 location: ID OPEN_SQUARE . expr CLOSED_SQUARE

    CALLOUT          shift, and go to state 47
    TRUE             shift, and go to state 67
    FALSE            shift, and go to state 68
    SUB              shift, and go to state 69
    ID               shift, and go to state 53
    HEX_LITERAL      shift, and go to state 34
    DECIMAL_LITERAL  shift, and go to state 35
    CHAR_LITERAL     shift, and go to state 70
    NOT              shift, and go to state 72
    OPEN_PAREN       shift, and go to state 73

    location      go to state 74
    method_call   go to state 75
    method_name   go to state 62
    expr          go to state 121
    literal       go to state 77
    int_literal   go to state 78
    bool_literal  go to state 79


State 86

   28 id_star: ID .
   29        | ID . COMMA id_star

    COMMA  shift, and go to state 122

    $default  reduce using rule 28 (id_star)


State 87

   27 var: type id_star . SEMI_COLON

    SEMI_COLON  shift, and go to state 123


State 88

   22 block: OPEN_BRACE var_decl CLOSED_BRACE .

    $default  reduce using rule 22 (block)


State 89

   26 var_decl: var_decl var .

    $default  reduce using rule 26 (var_decl)


State 90

   24 block: OPEN_BRACE var_decl statement_star . CLOSED_BRACE
   31 statement_star: statement_star . statement

    RETURN        shift, and go to state 46
    CALLOUT       shift, and go to state 47
    IF            shift, and go to state 48
    FOR           shift, and go to state 49
    CONTINUE      shift, and go to state 50
    BREAK         shift, and go to state 51
    OPEN_BRACE    shift, and go to state 39
    CLOSED_BRACE  shift, and go to state 124
    ID            shift, and go to state 53

    block        go to state 55
    statement    go to state 92
    location     go to state 60
    method_call  go to state 61
    method_name  go to state 62


State 91

   23 block: OPEN_BRACE statement_star CLOSED_BRACE .

    $default  reduce using rule 23 (block)


State 92

   31 statement_star: statement_star statement .

    $default  reduce using rule 31 (statement_star)


State 93

   44 assign_op: SUB .

    $default  reduce using rule 44 (assign_op)


State 94

   45 assign_op: PLUSEQUAL .

    $default  reduce using rule 45 (assign_op)


State 95

   46 assign_op: MINUSEQUAL .

    $default  reduce using rule 46 (assign_op)


State 96

   32 statement: location assign_op . expr SEMI_COLON
